[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python-cayennelpp"
dynamic = ["version"]
description = "A package to decode data encoded in the CayenneLPP format."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [
    { name = "Oleg Zvonarov", email = "info+github@zvonarov.com" }
]

classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/OlegZv/Python-CayenneLPP"
Repository = "https://github.com/OlegZv/Python-CayenneLPP"
Issues = "https://github.com/OlegZv/Python-CayenneLPP/issues"


[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pylint>=3.2.7",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.12",
    "setuptools-scm>=8.3.1",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.setuptools_scm]
